# firmware_generator

./: README.md  generator.py  main.py
output/1_90c96c08/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
output/1_90c96c08/main/: data.json
output/1_90c96c08/main/certs/: certificate.pem.crt  private.pem.key
output/1_90c96c08/main/include/: node.h  publish.h
output/9f6a088a5a/: CMakeLists.txt
output/9f6a088a5a/main/: data.json
output/9f6a088a5a/main/certs/: certificate.pem.crt  (+1 more)
template/generator_template/: CMakeLists.txt  partitions.csv  sdkconfig
template/generator_template/main/: CMakeLists.txt  main.c
template/generator_template/spiffs_data/: data.json
templates/4_node/: sdkconfig
templates/4_node/main/: Kconfig.projbuild  data.json  idf_component.yml  main.cpp
templates/cct_lighting/: CMakeLists.txt  README.md
templates/cct_lighting/main/: Kconfig.projbuild  data.json  main.cpp
templates/cct_lighting/spiffs_data/: data.json
templates/generator_template/: sdkconfig.old
templates/generator_template/main/: main.c
templates/rgb_lighting/: CMakeLists.txt  README.md  sdkconfig
templates/rgb_lighting/main/: CMakeLists.txt  data.json  main.cpp
templates/rgb_lighting/main/include/: app_wifi.h  color.h  lighting.h
templates/switch_device/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
templates/switch_device/main/: CMakeLists.txt  Kconfig.projbuild  data.json  main.c  main.cpp  node.h  publish.h
templates/switch_device/main/certs/: certificate.pem.crt
templates/switch_device/main/include/: node.h
(+11 files in other folders)
